[workspace]
members = [
    "c02/hello",
    "c02/actix-gcd",
    "c02/mandelbrot",
    "c02/quickreplace",
    "c03/example",
    "c04/ownership",
    "c04/os-move",
    "c04/copy-type",
    "c04/rc-arc",
    "c05/example",
    "c06/example",
    "c07/example",
    "c07/tidecalc",
    "c08/example",
    "c08/fern_sim",
    "c08/fern",
    "c08/ranges",
    "c09/example",
    "c10/example",
    "c11/example",
    "c12/example",
    "c13/example",
    "c14/example",
    "c15/example",
    "c16/example",
    "c15/try_fold",
    "c17/example",
    "c18/example",
    "c18/grep",
    "c18/echo",
    "c18/reqwest_server",
    "c19/example",
]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
hello = { path = "c02/hello" }
